syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.kong.proto";
option java_outer_classname = "RegisterProto";

package proto;

message RegisterReq {
    int64 id = 1;
    string name = 2;
    string secret = 3;
    string type = 4;
    string affiliation = 5;
    string attrs = 6;
}

message RegisterResp {
    int64 code = 1;
}

message EnrollReq {
    int64 id = 1;
    string name = 2;
    string secret = 3;
    string type = 4;
    string attrs = 5;
}

message EnrollResp {
    int64 code = 1;
}

message DownloadReq {
    int64 id = 1;
    string name = 2;
    string type = 3;
}

message DownloadResp {
    string cert = 1;
}

message VerifyIdentityReq {
    string name = 1;
    int64 rand = 2;
    string sign = 3;
    string type = 4;
}

message VerifyIdentityResp {
    int64 code = 1;
}

message RevokeReq {
    int64 id = 1;
    string name = 2;
    string type = 3;
}

message RevokeResp {
    int64 code = 1;
}

message VerifyCertReq {
    string name = 1;
    string certcontent = 2;
    string type = 3;
}

message VerifyCertResp {
    int64 code = 1;
}

message InstallReq {
    string name = 1;
    string ip = 2;
    string user = 3;
    string pw = 4;
    string path = 5;
}

message InstallResp {
    int64 code = 1;
}

service FabricService {
    rpc Register(RegisterReq) returns (RegisterResp) {}
    rpc Enroll(EnrollReq) returns (EnrollResp) {}
    rpc Download(DownloadReq) returns (DownloadResp) {}
    rpc VerifyIdentity(VerifyIdentityReq) returns (VerifyIdentityResp) {}
    rpc Revoke(RevokeReq) returns (RevokeResp) {}
    rpc VerifyCert(VerifyCertReq) returns (VerifyCertResp) {}
}